fix(is-select): select/deselect all propagate only visible items (filtered)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -209,7 +209,7 @@ $light-focused-color: transparentize($light-base-color, 0.1);
   --is-portlet-border-color: var(--xe-dark-08);
   --is-portlet-header-bg-color: transparent;
   --is-portlet-header-fg-color: var(--xe-dark-100);
-  // --is-select-search-bg-color: var(--xe-dark-08);
+  --is-select-search-bg-color: var(--xe-dark-08);
   --is-select-search-border-color: var(--xe-dark-16);
   --is-section-header-fg-color: var(--xe-white);
   --is-section-header-bg-color: var(--xe-dark-72);
